--- a/main.html
+++ b/main.html
@@ -7,10 +7,19 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+	<p>First Paragraph</p>
+	<p>lorem Ipsum lorem Ipsumlorem Ipsum lorem Ipsum lorem Ipsumlorem Ipsum</p>
+	<p>lorem Ipsum lorem Ipsumlorem Ipsum lorem Ipsum lorem Ipsumlorem Ipsum</p>
+	<p>lorem Ipsum lorem Ipsumlorem Ipsum lorem Ipsum lorem Ipsumlorem Ipsum</p>
+	<ul>
+		<li>First Item</li>
+		<li>Second Item</li>
+		<li>Third Item</li>
+		<li>Fourth Item</li>
+		<li>Fifth Item</li>
+	</ul>
+	 <script type="text/javascript" src="./script.js">
 </script>
-
 </body>
 
 </html>
