--- a/main.html
+++ b/main.html
@@ -7,10 +7,12 @@
 </head>
 
 <body>
+	<article>
 	<p>First Paragraph</p>
 	<p>lorem Ipsum lorem Ipsumlorem Ipsum lorem Ipsum lorem Ipsumlorem Ipsum</p>
 	<p>lorem Ipsum lorem Ipsumlorem Ipsum lorem Ipsum lorem Ipsumlorem Ipsum</p>
 	<p>lorem Ipsum lorem Ipsumlorem Ipsum lorem Ipsum lorem Ipsumlorem Ipsum</p>
+	</article>
 	<ul>
 		<li>First Item</li>
 		<li>Second Item</li>
